--- a/EjercicioPractico/frontend/src/components/Header/Header.css
+++ b/EjercicioPractico/frontend/src/components/Header/Header.css
@@ -9,7 +9,7 @@
     margin: 0; 
     border-radius: 5px;
     box-shadow: 2px 0px 10px;
-    background-color: #fffdf9;
+    background-color: #fffcf6;
 }
 
 /* Estilos para el logo */
